// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ec0lintRunner should call ec0lint.lint with the document path and given options 1`] = `
Object {
  "code": "a {}",
  "codeFilename": "/path/to/file.scss",
  "config": Object {
    "customSyntax": "postcss-scss",
  },
  "configBasedir": undefined,
  "configFile": undefined,
  "customSyntax": undefined,
  "fix": true,
  "formatter": [Function],
  "ignoreDisables": undefined,
  "ignorePath": "/.ec0lint-styleignore",
  "reportDescriptionlessDisables": undefined,
  "reportInvalidScopeDisables": undefined,
  "reportNeedlessDisables": undefined,
}
`;

exports[`Ec0lintRunner should return processed lint results from Stylelint with configured rules 1`] = `
Object {
  "diagnostics": Array [
    Object {
      "code": "block-no-empty",
      "message": "Unknown rule block-no-empty.",
      "range": Object {
        "end": Object {
          "character": 1,
          "line": 0,
        },
        "start": Object {
          "character": 0,
          "line": 0,
        },
      },
      "severity": 1,
      "source": "ec0lint-style",
    },
  ],
}
`;

exports[`Ec0lintRunner should return processed lint results from Stylelint without configured rules 1`] = `
Object {
  "diagnostics": Array [
    Object {
      "code": "CssSyntaxError",
      "message": "Unclosed block (CssSyntaxError)",
      "range": Object {
        "end": Object {
          "character": 1,
          "line": 0,
        },
        "start": Object {
          "character": 0,
          "line": 0,
        },
      },
      "severity": 1,
      "source": "ec0lint-style",
    },
  ],
}
`;

exports[`Ec0lintRunner should throw errors thrown by Stylelint 1`] = `"You must pass ec0lint-style a \`files\` glob or a \`code\` string, though not both"`;
